--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,40 @@
-.vscode
-.idea
+# IDE and editor folders
+.vscode/
+.idea/
 
-/__pycache__
-/pythonprograms/__pycache__
+# Python cache files
+/__pycache__/
+/src/__pycache__
 
-/dist
-/pygrams.egg-info
-/test
+# Distribution and packaging files
+/dist/
+/pygrams.egg-info/
+/src.egg-info/
 
+# Test directories and test files
+/test/
 upinst
 test.py
 pygrams_test.py
 
+# Python bytecode files
+*.pyc
+*.pyo
+*.pyd
 
+# Virtual environment directories
+env/
+venv/
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints
+
+# Mac system files
+.DS_Store
+
+# Windows system files
+Thumbs.db
