--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # IDE and editor folders
 .vscode/
 .idea/
+/build/
 
 # Python cache files
 /__pycache__/
-/src/__pycache__
+/pygrams/__pycache__
 
 # Distribution and packaging files
 /dist/
 /pygrams.egg-info/
-/src.egg-info/
 
 # Test directories and test files
 /test/
